@@ -1,9 +1,8 @@
-package org.example.service;
+package org.example.provider;
 
-import org.example.model.Packet;
-import org.example.model.Player;
+import org.example.data.Packet;
+import org.example.data.Player;
 
-import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import java.util.Random;
@@ -13,17 +12,15 @@ import java.util.stream.IntStream;
 import static java.util.function.Function.identity;
 import static org.example.config.Config.config;
 
-public class Provider implements Print {
+public class DataProvider {
 
-  public List<Player> getPlayers() {
-    List<Player> players = IntStream.range(0, config().getPlayersCount())
+  public static List<Player> getPlayers() {
+    return IntStream.range(0, config().getPlayersCount())
             .mapToObj(Player::new)
-            .collect(Collectors.toList());
-//    print(players);
-    return players;
+            .toList();
   }
 
-  public Map<Integer, Packet> getFood(List<Integer> playersIds) {
+  public static Map<Integer, Packet> getFood(List<Integer> playersIds) {
     double poisonProbability = config().getPoisonProbability();
     List<Integer> calories = config().getCaloriesList();
 
@@ -31,13 +28,11 @@ public class Provider implements Print {
       throw new IllegalArgumentException("Wrong configuration parameters");
     }
 
-    Map<Integer, Packet> food = playersIds.stream()
+    return playersIds.stream()
             .collect(Collectors.toMap(identity(), p -> getPortion(poisonProbability, calories)));
-//    print(food);
-    return food;
   }
 
-  public Packet getPortion(double poisonProbability, List<Integer> calories) {
+  private static Packet getPortion(double poisonProbability, List<Integer> calories) {
     Random random = new Random();
     int nextInt = random.nextInt(calories.size());
 
@@ -45,15 +40,5 @@ public class Provider implements Print {
             .calories(calories.get(nextInt))
             .isPoison(random.nextDouble() <= poisonProbability)
             .build();
-  }
-
-  @Override
-  public void print(Map<?, ?> map) {
-    System.out.println("Food: " + map);
-  }
-
-  @Override
-  public void print(Collection<?> collection) {
-    System.out.println("Players: " + collection);
   }
 }
